# MLOPS_Grupo_5

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
Proyecto_1_Grupo_5/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
Proyecto_1_Grupo_5/notebooks/: TFX.ipynb  transform_module.py
Proyecto_1_Grupo_5/notebooks/.ipynb_checkpoints/: TFX-checkpoint.ipynb
Proyecto_2_Grupo_5/: README.md  docker-compose.yaml  mlflow_serv.service
Proyecto_2_Grupo_5/airflow/: Dockerfile  requirements.txt
Proyecto_2_Grupo_5/fastapi/: Dockerfile  main.py  requirements.txt
Proyecto_2_Grupo_5/streamlit/: Dockerfile  app.py  requirements.txt
Proyecto_3_Grupo_5/: README.md
Proyecto_3_Grupo_5/airflow/: requirements.txt
Proyecto_3_Grupo_5/fastapi/: main.py  requirements.txt
Proyecto_3_Grupo_5/k8s/: airflow-configmap.yaml  airflow-scheduler.yaml  airflow-triggerer.yaml  airflow-webserver.yaml  airflow-worker.yaml  fastapi-deployment.yaml  grafana-deployment.yaml  grafana-service.yaml  locust-configmap.yaml  locust-deployment.yaml  locust-service.yaml  minio-deployment.yaml  (+10 more)
Proyecto_Final_Grupo_5/: README.md
Taller_Airflow_Grupo_5/: .gitignore  Prueba_Conexión_mysql.ipynb  README.md  docker-compose.yaml
Taller_Airflow_Grupo_5/fastapi/: Dockerfile  main.py  pyproject.toml  requirements.txt
Taller_CI_CD/: README.md
Taller_Locust_Grupo_5/: DOCUMENTACIÓN ITERACIONES.docx  Dockerfile  README.md  docker-compose.locust.yaml  docker-compose.yaml  locustfile.py  main.py  requirements.txt
Taller_Mlflow_Grupo_5/: README.md  docker-compose.yaml  mlflow_serv.service
(+132 files in other folders)
