[project]
name = "mi-fastapi-app"
version = "0.1.0"
description = "API con FastAPI y Uvicorn usando UV"
authors = ["Tu Nombre <tu@email.com>"]
requires-python = ">=3.9"

dependencies = [
    'fastapi>=0.100.0',
    'pydantic>=2.3.0',
    'uvicorn>=0.22.0',
    'joblib>=1.3.0',
    'pandas>=2.0.0',
    'scikit-learn>=1.2.0',
    'dill>=0.3.0'  
]
